force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>Keep the different type of assessments like medical , CMS assessment etc.</description>
    <label>Assessment</label>
    <nameField>
        <displayFormat>AN - {0000}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>