force-app/main/default/objects/Assessment__c/fields/AssessmentTemplate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the assessment template ID</description>
    <label>Assessment Template</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>