force-app/main/default/objects/Assessment__c/fields/AssessmentTitle__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTitle__c</fullName>
    <description>The name of the assessment popuated by the record creator</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>