force-app/main/default/objects/Assessment__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the partner who completed the assessment on behalf of the resident</description>
    <label>Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>