force-app/main/default/objects/Assessment__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the resident for which the partner completed the assessment</description>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessments (Resident)</relationshipLabel>
    <relationshipName>Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>