force-app/main/default/objects/Assessment__c/recordTypes/Assessment_Template.recordType-meta.xml
<RecordType>
    <fullName>Assessment_Template</fullName>
    <active>true</active>
    <label>Assessment Template</label>
</RecordType>