force-app/main/default/objects/Assessment__c/recordTypes/User_Assessment.recordType-meta.xml
<RecordType>
    <fullName>User_Assessment</fullName>
    <active>true</active>
    <label>User Assessment</label>
</RecordType>