force-app/main/default/objects/Assessment__c/listViews/Assessment_Template.listView-meta.xml
<ListView>
    <fullName>Assessment_Template</fullName>
    <columns>NAME</columns>
    <columns>AssessmentTitle__c</columns>
    <columns>AssessmentTemplate__c</columns>
    <columns>Partner__c</columns>
    <columns>Resident__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Assessment__c.Assessment_Template</value>
    </filters>
    <label>Assessment Template</label>
</ListView>