force-app/main/default/objects/Assessment__c/listViews/User_Assessment.listView-meta.xml
<ListView>
    <fullName>User_Assessment</fullName>
    <columns>NAME</columns>
    <columns>AssessmentTitle__c</columns>
    <columns>AssessmentTemplate__c</columns>
    <columns>Partner__c</columns>
    <columns>Resident__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Assessment__c.User_Assessment</value>
    </filters>
    <label>User Assessment</label>
</ListView>